# pantha-rei-data-viz

./: .gitignore  BACKEND_FIX_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_DATA_SUMMARY.md  CONSERVATIVE_REFACTOR_PLAN.md  COORDINATE_SYSTEM_UPGRADE.md  LAND_OCEAN_VALIDATION_FIX.md  RANDOM_OCEAN_GENERATOR_FIX.md  README.md  RESTORATION_PLAN.md  SETUP.md  SETUP_GUIDE.md  TODO-LIST.md  ULTIMATE_SCALING_SOLUTION.md  complete_netcdf_variables_inventory.json  comprehensive_ocean_health_data_500_locations_2003_2025.csv  config.py  demo.sh  expand_ocean_coordinates.py  fixed_land_validation_server.py  generate_simplified_massive_coordinates.py  main.py  ocean_coordinates.json  ocean_coordinates.py  ocean_coordinates_1000.json  ocean_coordinates_1000.py  ocean_coordinates_5000.json  ocean_coordinates_5000.py  ocean_health_assessment_report.md  ocean_health_temporal_spatial_report.md  quick_websocket_server.py  real_data_websocket_server.py  requirements.txt  setup.bat  setup.sh  start.bat  start.sh  test_system.sh  ultra_ocean_coordinates_1287.json  ultra_ocean_coordinates_1287.py  (+5 more)
backend/: README.md  __init__.py  activate.bat  activate.sh  analyze_data_quality.py  complete_reliable_ocean_data_500_locations.csv  comprehensive_ocean_health_data_500_locations_real_extraction.csv  headers.txt  new_headers.txt  ocean_coordinates_100_percent_reliable.csv  pyproject.toml  requirements.txt  sample_reliable_ocean_data_50_locations.csv  start-api.sh  start_production.py  web_globe_compatibility_report.json
backend/api/: cache_manager.py  main.py
backend/clients/: base_client.py  obis_client.py  (+5 more)
(+327 files in other folders)
